--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="DTO\" />
-    <Folder Include="ViewModels\" />
+    <None Remove="Responses\BaseResponse.cs~RF8de29fc.TMP" />
   </ItemGroup>
 
 </Project>
