--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -10,4 +10,8 @@
     <None Remove="Responses\BaseResponse.cs~RF8de29fc.TMP" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
+  </ItemGroup>
+
 </Project>
